refactor : Result Predicate 타입 변경 및 필드명 수정
이전에는 BiPredicate 타입을 Integer, Integer로 선언을 하여 플레이어 점수와 딜러 점수를 받아오는 형식이었다.
Player와 Dealer 타입으로 변경해준 이유는 블랙잭 검사나 버스트 검사를 Result 클래스에서 Player와 Dealer의 메서드를 이용하기 위함이다. 또한 judgeResult에서 필요한 값들을 모두 받아 데이터 처리를 해주게 되었을 때, 요구사항이 변경되면 더 영향받기 쉬워질 수 있다.